# ml

./: .gitignore  .gitmodules  README.md
datasets/: .gitignore  github___a-r-r-o-w@competitive-programming.md
fashion-mnist-classifier/: .gitignore  README.md
fashion-mnist-classifier/include/: matrix.hpp  mnist.hpp  nn.hpp  testing.hpp  utils.hpp
fashion-mnist-classifier/tests/: CMakeLists.txt  matrix-test.cpp  mnist-test.cpp
kaggle/handwritten-digit-recognizer/: mnist-classification.ipynb
kaggle/predict-health-outcomes-of-horses/: predict-health-outcome-of-horses-v1.ipynb  predict-health-outcome-of-horses-v2.ipynb  (+2 more)
label-classification/c/handwritten-digit-classifier/: .gitignore  CMakeLists.txt  README.md
label-classification/c/handwritten-digit-classifier/include/: CMakeLists.txt  error_handler.c  error_handler.h  matrix.c  matrix.h  mnist.c  mnist.h  nn.c  nn.h  utils.c  utils.h
label-classification/c/handwritten-digit-classifier/res/datasets/: README.md
label-classification/c/handwritten-digit-classifier/src/: CMakeLists.txt  main.c
label-classification/c/handwritten-digit-classifier/src/handwritten-digit-classifier-in-python/: digit-classifier.py
label-classification/c/handwritten-digit-classifier/tests/: CMakeLists.txt  matrix_test.c  mnist_test.c  test.h
label-classification/cpp/xor/: CMakeLists.txt
label-classification/cpp/xor/include/: matrix.hpp  nn.hpp  utils.hpp
label-classification/cpp/xor/src/: CMakeLists.txt  main.cpp
notebooks/: ray_zero_copy_explore.ipynb
same-input-output-nn/: CMakeLists.txt  README.md
same-input-output-nn/src/: main.c  main.py  rough.c
(+17 files in other folders)
